--- a/package.json
+++ b/package.json
@@ -5,26 +5,35 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "svg": "vsvg -s ./src/icons/svg -t ./src/icons/components --ext ts --es6"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.1.0",
+    "vue-i18n": "^8.14.0",
+    "vue-property-decorator": "^8.2.2",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vue-svgicon": "^3.2.6",
+    "vuex": "^3.0.1",
+    "vuex-module-decorators": "^0.10.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "typescript": "^3.4.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "@types/js-cookie": "^2.2.2",
+    "@types/nprogress": "^0.2.0"
   }
 }
