--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.27.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
@@ -25,6 +26,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.14.0",
+    "vue-markdown": "^2.2.4",
     "vue-property-decorator": "^8.2.2",
     "vue-router": "^3.0.3",
     "vue-svgicon": "^3.2.6",
